--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
 [x] storeのアクションに、非同期でfirebaseからmessageを取ってくるサンプルをpages/sample.vueに実装する
 [x] B1u3Postコンポーネントの日付のフォーマットを整える
+[ ] vuex store の記事の state をキー付きにする
