ブログの記事のURLバリデーションの完了

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,7 @@
 [x] B1u3Postコンポーネントの日付のフォーマットを整える
 [x] vuex store の記事の state をキー付きにする
 [x] B1u3Post に個々の記事を表示できるようにする
-[ ] 記事のリンク貼る
+[x] 記事のリンク貼る
+[x] /blot/post/:id の id が存在しなかった時のエラー処理(URLバリデーション)
 [ ] B1u3Postにカテゴリーを入れられるようにする
 [ ] B1u3Post が表示されるページのURLバリデーション
