カテゴリーを取ってくるアクションの追加

--- a/todo.txt
+++ b/todo.txt
@@ -4,5 +4,5 @@
 [x] B1u3Post に個々の記事を表示できるようにする
 [x] 記事のリンク貼る
 [x] /blot/post/:id の id が存在しなかった時のエラー処理(URLバリデーション)
+[ ] 画像入れられるようにする
 [ ] B1u3Postにカテゴリーを入れられるようにする
-[ ] B1u3Post が表示されるページのURLバリデーション
