--- a/todo.txt
+++ b/todo.txt
@@ -6,4 +6,6 @@
 [x] /blot/post/:id の id が存在しなかった時のエラー処理(URLバリデーション)
 [x] B1u3Postにカテゴリーを入れられるようにする
 [x] 画像入れられるようにする
-[ ] raw-htmlで書けるようにする
+[x] raw-htmlで書けるようにする
+[ ] ブログ用のクライアントの作成(python)
+[ ] 記事のサムネの変更
