--- a/todo.txt
+++ b/todo.txt
@@ -7,5 +7,11 @@
 [x] B1u3Postにカテゴリーを入れられるようにする
 [x] 画像入れられるようにする
 [x] raw-htmlで書けるようにする
-[ ] ブログ用のクライアントの作成(python)
+## こっからクライアント
+[x] Markdown から HTML にコンパイルする
+[x] firebaseに保存する機能
+[x] 適切にカテゴリーを処理
+[ ] 画像を適切な場所に挿入できる機能
+[ ] 記事からサムネを作り出す機能
 [ ] 記事のサムネの変更
+[ ] Updated Post の更新機能
