クライアントだいたい完成

--- a/todo.txt
+++ b/todo.txt
@@ -11,7 +11,10 @@
 [x] Markdown から HTML にコンパイルする
 [x] firebaseに保存する機能
 [x] 適切にカテゴリーを処理
-[ ] 画像を適切な場所に挿入できる機能
+[x] 画像をs3にあげるサンプルの作成
+[x] markdown の preprocessor の作成
+[x] 画像を適切な場所に挿入できる機能
+[x] ディレクトリに分けて記事を管理できる機能
 [ ] 記事からサムネを作り出す機能
 [ ] 記事のサムネの変更
 [ ] Updated Post の更新機能
